refactor api contract (adding name of ministry to the models), update the backend to implement the logic (in mapper, service, controller, and in the entity)
