# api-contract/src/main/resources/api-contract.yaml
@@ -96,6 +96,10 @@ components:
           description: Name of the Representative entity
           type: string
           example: 'Vadász Csaba'
+        government:
+          description: Name of the Ministry
+          type: string
+          example: "Miniszterelnökség"
         jobTitle:
           description: Job title of the Government Representative
           type: string
@@ -134,6 +138,10 @@ components:
           description: Job title of the Government Representative
           type: string
           example: "Miniszterelnökséget vezető miniszter"
+        government:
+          description: Name of the Ministry
+          type: string
+          example: "Miniszterelnökség"
         address:
           description: Address of the Agency
           type: string
